Removing column renaming.