@@ -8,13 +8,16 @@ package edu.ie3.datamodel.io.factory.timeseries;
 import edu.ie3.datamodel.io.factory.EntityData;
 import edu.ie3.datamodel.io.factory.EntityFactory;
 import edu.ie3.datamodel.io.source.TimeSeriesMappingSource;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class TimeSeriesMappingFactory
     extends EntityFactory<TimeSeriesMappingSource.MappingEntry, EntityData> {
-  private static final String ENTITY = "entity";
+  private static final String PARTICIPANT = "participant";
   private static final String TIME_SERIES = "timeSeries";
 
   public TimeSeriesMappingFactory() {
@@ -23,13 +26,14 @@ public class TimeSeriesMappingFactory
 
   @Override
   protected List<Set<String>> getFields(Class<?> entityClass) {
-    return List.of(newSet(ENTITY, TIME_SERIES));
+    return Collections.singletonList(
+        Stream.of(PARTICIPANT, TIME_SERIES).collect(Collectors.toSet()));
   }
 
   @Override
   protected TimeSeriesMappingSource.MappingEntry buildModel(EntityData data) {
-    UUID entity = data.getUUID(ENTITY);
+    UUID participant = data.getUUID(PARTICIPANT);
     UUID timeSeries = data.getUUID(TIME_SERIES);
-    return new TimeSeriesMappingSource.MappingEntry(entity, timeSeries);
+    return new TimeSeriesMappingSource.MappingEntry(participant, timeSeries);
   }
 }
